/* Old French */ <France#37087426>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -284,7 +284,7 @@ From {{etyl|fro|nrf}} {{m|fro|France}}, from {{etyl|LL.|nrf}} {{m|la|Francia}}, 
 ==Old French==
 [[File:Except from Chanson de Roland ms. Oxford p. 7.png|thumb|right|Excerpt from the Oxford manuscript of {{w|The Song of Roland}} showing 'francs' and 'france' without capital letters.]]
 ===Alternative forms===
-* {{l|fro|france}} {{qualifier|manuscript form}}
+* {{lang|fro|france}} {{qualifier|manuscript form}}
 
 ===Etymology===
 From {{etyl|la|fro}} {{m|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe.
