--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -287,7 +287,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 *: Skolt: {{t|sms|vuõjj}}
 *: Ter: {{t|sjt|vɨjj}}
 * Samogitian: {{t-needed|sgs}}
-* Sanskrit: {{t|sa|नवनीत|sc=Deva}}, {{t|sa|घृत|sc=Deva}}
+* Sanskrit: {{t|sa|नवनीत|sc=Deva}}, {{t|sa|घृत|n|sc=Deva}}
 * Scottish Gaelic: {{t|gd|ìm|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|маслац|m}}, {{t|sh|путер|m}}
