--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -250,6 +250,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Latgalian: {{t|ltg|svīsts}}
 * Latin: {{t|la|butyrum}}
 * Latvian: {{t+|lv|sviests|m}}
+* Limburgish: {{t+|li|bótter|m}}
 * Lithuanian: {{t|lt|sviestas|m}}
 * Lojban: {{t+|jbo|matne}}
 {{trans-mid}}
