--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -224,7 +224,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Gujarati: {{t+|gu|માખણ|tr=mAkhaN|sc=Gujr}}, {{t|gu|મસ્કો|tr=masko|sc=Gujr}}
 * Hawaiian: {{t|haw|waiūpaka}}
 * Hebrew: {{t+|he|חֶמְאָה|f|tr=khem'a}}
-* Hindi: {{t|hi|घी|tr=ghī}}, {{t|hi|मक्खन|tr=makkhan}}, {{t|hi|माखन|tr=mAkhan|sc=Deva}}
+* Hindi: {{t|hi|घी|m|tr=ghī}}, {{t|hi|मक्खन|m|tr=makkhan}}, {{t|hi|माखन|tr=mAkhan|sc=Deva}}
 * Hungarian: {{t+|hu|vaj}}
 * Icelandic: {{t+|is|smjör|n}}
 * Ido: {{t+|io|butro}}
@@ -326,7 +326,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Welsh: {{t+|cy|menyn|m}}
 * West Frisian: {{t|fy|bûter|c}}
 * Yiddish: {{t|yi|פּוטער|f|tr=puter|sc=Hebr}}
-* Zulu: {{t|zu|ibhotela}}, {{t|zu|iphehlwa}}
+* Zulu: {{t|zu|ibhotela|c5}}
 {{trans-bottom}}
 
 {{trans-top|other foodstuffs like butter}}
