--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -279,7 +279,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
-* Punjabi: {{t|pa|ਮੱਖਣ|tr=makhaṇa|sc=Guru}}
+* Punjabi: {{t|pa|ਮੱਖਣ|m|tr=makhaṇa|sc=Guru}}
 * Romanian: {{t+|ro|unt|n}}
 * Romansch: {{t|rm|paintg|m}}
 * Russian: {{t+|ru|ма́сло|n}}, {{t+|ru|сли́вочное ма́сло|n}}
