--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -224,7 +224,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
 * Greek: {{t+|el|βούτυρο|n}}
 * Greenlandic: {{t|kl|punneq}}
-* Gujarati: {{t+|gu|માખણ|tr=mAkhaN|sc=Gujr}}, {{t|gu|મસ્કો|tr=masko|sc=Gujr}}
+* Gujarati: {{t+|gu|માખણ|n|tr=mākhaṇa|sc=Gujr}}, {{t|gu|મસ્કો|tr=maskō|sc=Gujr}}
 * Hawaiian: {{t|haw|waiūpaka}}
 * Hebrew: {{t+|he|חֶמְאָה|f|tr=khem'a}}
 * Hindi: {{t|hi|घी|m|tr=ghī}}, {{t|hi|मक्खन|m|tr=makkhan}}, {{t|hi|माखन|tr=mAkhan|sc=Deva}}
