--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -25,7 +25,7 @@ A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{term|exempli 
 :: {{a|UK}} ''I like sweet foods, e.g. [[danish]]es.''
 :: {{a|US}} ''I like sweet foods (e.g., [[marzipan]]) and eat them often.''
 :: ''I like sweet foods—e.g., [[red bean|red-bean]] [[zongzi]]—and so prefer [[Shanghainese]] cuisine to, e.g., [[Cantonese]].''
-* The example(s) following "e.g." should be illustrative, ''not'' exhaustive.<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> An exhaustive list would constitute a rephrasing instead of an example and would use "[[i.e.]]" instead. Since a concluding ''[[et cetera]]'' makes a list exhaustive, "[[etc.]]" should never be used with "e.g."
+* The example(s) following "e.g." should be illustrative, ''not'' exhaustive.<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> An exhaustive list or rephrasing uses "[[i.e.]]" instead. Since a concluding ''[[et cetera]]'' makes a list exhaustive, "[[etc.]]" should never be used with "e.g."
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
