--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -3,7 +3,7 @@
 
 ===Alternative forms===
 * {{sense|informal}} [[eg]]
-* {{sense|dated}} [[ex. gr.]]
+* {{sense|dated}} [[ex. gr.]], [[e. g.]]
 
 ===Etymology===
 A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{term|exempli gratia|exemplī grātiā|[[for the sake of]] an [[example]]|lang=la}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref> Previously abbreviated to ''ex. gr.''
