--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -108,7 +108,7 @@ A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{term|exempli 
 {{rfc-header|Abbreviation}}
 {{head|la|abbreviation}}
 
-# [[exemplum#Latin|exemplī]] [[gratia|grātiā]] (for example)
+# [[exempli gratia|exemplī grātiā]] ("[[for the sake of]] an [[example]], [[for example]]")
 #* '''1731''', ''Theologia Scholastica'':
 #*: non tamen id semper fieri necesse est. '''e.g.''' aliquis corruptus pecuniâ
 #* '''1821''', Julius Müller, ''Ratio et historia odii quo foenus habitum est'', page 10:
