--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -1,67 +1,33 @@
 ==English==
-
+{{wikipedia}}
 ===Alternative forms===
-{{top2}}
-* {{l|en|etc}}, {{l|en|etc.}}
-* [[etcetera]]
-* {{l|en|et ceteræ}} {{qualifier|archaic}}
-{{mid2}}
-* {{l|en|&c}}, {{l|en|&c.}} {{qualifier|dated}}
-* [[& cetera]] {{qualifier|dated}}
-* [[et cætera]], [[et caetera]] {{qualifier|[[erroneous]] and archaic}}
-{{bottom}}
+* {{sense|abbreviated}} ''See'' '''[[etc.]]'''
+* {{sense|dated}} [[& cetera]]
+* {{sense|obsolete}} [[et caetera]], [[et cætera]]
+* {{sense|proscribed}} [[etcetera]]
+* {{sense|hypercorrect|obsolete}} {{l|en|et ceteræ}}
 
 ===Etymology===
-From {{etyl|la|en}} {{m|la|et cētera||and the rest" or "and so forth}}.
+From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[rest]] of the [[thing]]s}}.
 
 ===Pronunciation===
-* {{IPA|/ˌɛt ˈsɛt(ə)ɹə/|/ˌɛkˈsɛt(ə)ɹə/|lang=en}}; see usage notes below
+* {{IPA|/ˌɛt ˈsɛt(ə)ɹə/|/ˌɛkˈsɛt(ə)ɹə/|lang=en}} (''See [[etc.#Usage notes|Usage notes at etc.]]'')
 *: {{audio|en-us-etc.ogg|Audio (US)|lang=en}}
 
 ===Phrase===
 {{head|en|phrase}}
 
-# And the rest, and the others; to complete a list.
-#: ''The grocery sells cucumbers, lettuce, radishes, '''etc'''.''
-# And so forth; to indicate missing information, often well known.
-#: ''The plagiarism was painfully obvious: "It was the best of times, it was the worst of times," '''etc.'''''
+# {{context|uncommon|lang=en}} ''The full form of'' '''[[etc.]]''': "[[and so forth]]", "and the [[rest]]".
 
 ====Usage notes====
-* This phrase is not usually written out; rather, it is usually abbreviated in writing as {{m|en|etc.}}. In the past, it might also be written {{m|en|&c.}}, although this is now dated. The abbreviated forms are still pronounced, however, as the full phrase.
-* Many speakers use a {{IPAchar|/k/|lang=en}} sound rather than a {{IPAchar|/t/|lang=en}} sound in the first word. This pronunciation is usually considered incorrect, is [[proscribe]]d, and is somewhat stigmatized. It is sometimes represented in [[eye dialect]] as "[[excetera#English|excetera]]", "[[exetera#English|exetera]]", or "[[ekcetera#English|ekcetera]]".
+* ''See'' '''[[etc.#Usage notes|etc.]]''' ''for usage''.
 
 ====Synonyms====
-* {{sense|to complete a list}} [[et al.]]
-* {{sense|and so forth}} [[and so on]], [[blah blah blah]] {{a|colloquial}}
+* ''See'' '''[[etc.]]'''
 
 ====Translations====
-{{trans-top-also|and so on|and so forth|etc.}}
-* Arabic: {{t|ar|وَهَلُمَّ جَرًّا|tr=wa-halumma jarran}}, {{t|ar|إِلَخ}}, {{t|ar|إِلَى آخِرِه}}
-* Asturian: {{t|ast|etcétera}}
-* Catalan: {{t|ca|etcètera}}
-* French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}, {{t+|fr|et cætera}}
-* Galician: {{t|gl|etcétera}}
-* German: {{t+|de|etc.}}, {{t+|de|et cetera}}
-* Hindi: {{t|hi|आदि|sc=Deva}}
-* Ido: {{t|io|e cetere}}, {{t+|io|e.c.}}, {{t+|io|edc.}}
-* Italian: {{t+|it|eccetera}}
-* Norwegian:
-*: Bokmål: {{t|no|et cetera}}, {{t+|no|etc.}}
-*: Nynorsk: {{t|nn|et cetera}}, {{t|nn|etc.}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|et cetera}}
-* Romanian: {{t|ro|etc.}}, {{t+|ro|etcetera}}
-* Spanish: {{t+|es|etcétera}}, {{t|es|y más}}
-* Swedish: et cetera, {{t+|sv|etc.}}, {{t+|sv|etcetera}}
-* Turkish: {{t|tr|ve saire}} ({{t|tr|vs}}) ''(old-fashioned)'', {{t|tr|ve bunun gibi}} ({{t|tr|vb}}), {{t|tr|ve benzeri}} ({{t|tr|vb}})
-* Ukrainian: {{t|uk|і так да́лі|sc=Cyrl}}
-* Urdu: {{t|ur|وغیرہ|tr=vaġairah|sc=ur-Arab}}
-* Welsh: {{t|cy|ac yn y blaen}}
-* Yiddish: {{t|yi|און אַזוי ווײַטער|sc=Hebr}}
-{{trans-bottom}}
-
-====External links====
-* {{pedialite}}
+{{trans-see|completing a list|etc.}}
+{{trans-see|indicating omitted information|and so on}}
 
 [[Category:English coordinates]]
 
