--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -345,6 +345,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
 * Lombard: {{t|lmo|ciapà}}
 * Maore Comorian: {{t|swb|para|alt=upara}}
+* Maori: {{t|mi|hāhā}} {{qualifier|referring to the breath}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t+|pl|łapać|impf}}, {{t+|pl|złapać|pf}}, {{t+|pl|schwytać|pf}}
