--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -281,7 +281,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Mohawk: {{t|moh|owistóhseraʼ}}
 * Mongolian: {{t|mn|цөцгийн тос|sc=Cyrl}}
 * Navajo: {{t|nv|mandagíiya}}
-* Norman: {{t|nrf|beurre|m}}
+* Norman: {{qualifier|Jersey}} {{t|nrf|beurre|m}}
 * Norwegian:
 *: Bokmål: {{t+|nb|smør|n}}
 *: Nynorsk: {{t|nn|smør|n}}
