t+nrf:[[burre]] t+nrf:[[buure]] t+nrf:[[bür]] ([[WT:EDIT|Assisted]]) <butter#37119630>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -281,7 +281,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Mohawk: {{t|moh|owistóhseraʼ}}
 * Mongolian: {{t|mn|цөцгийн тос|sc=Cyrl}}
 * Navajo: {{t|nv|mandagíiya}}
-* Norman: {{qualifier|Jersey}} {{t|nrf|beurre|m}}
+* Norman: {{qualifier|Jersey}} {{t|nrf|beurre|m}}, {{t|nrf|burre|m}} {{qualifier|Guernsey}}, {{t|nrf|buure|m}} {{qualifier|continental Norman}}, {{t|nrf|bür|m}} {{qualifier|Sark}}
 * Norwegian:
 *: Bokmål: {{t+|nb|smør|n}}
 *: Nynorsk: {{t|nn|smør|n}}
