--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -227,7 +227,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Georgian: {{t|ka|კარაქი}}
 * German: {{t+|de|Butter|f}}
 *: Alemannic German: {{t|gsw|Anke|m}}
-*: Bavarian: {{t|bar|Budda|m}}
+*: Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}
 *: Pennsylvania German: {{t|pdc|Booter|f}}
 *: Silesian German: {{t|sli|Putter|f}}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
@@ -266,6 +266,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Lithuanian: {{t|lt|sviestas|m}}
 * Lojban: {{t+|jbo|matne}}
 {{trans-mid}}
+* Lombard: {{t|lmo|butter|m}} {{qualifier|Milan}}, {{t|lmo|bütìr|m}} {{qualifier|Occidental}}
 * Low German:
 *: German Low German: {{t+|nds-de|Botter|f}}
 * Luxembourgish: {{t+|lb|Botter|m}}
@@ -295,6 +296,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
 * Punjabi: {{t|pa|ਮੱਖਣ|m|tr=makhaṇa|sc=Guru}}
+* Quechua: {{t|qu|mantikilla}}
 * Romanian: {{t+|ro|unt|n}}
 * Romansch: {{t|rm|paintg|m}}
 * Russian: {{t+|ru|ма́сло|n}}, {{t+|ru|сли́вочное ма́сло|n}}
@@ -344,6 +346,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Votic: {{t|vot|või}}
 * Walloon: {{t+|wa|boure|m}}
 * Welsh: {{t+|cy|menyn|m}}
+* West Flemish: {{t|vls|beuter|m}}
 * West Frisian: {{t|fy|bûter|c}}
 * Yiddish: {{t|yi|פּוטער|f|tr=puter|sc=Hebr}}
 * Yola: {{t|yol|buthther}}
