--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -266,7 +266,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Lithuanian: {{t|lt|sviestas|m}}
 * Lojban: {{t+|jbo|matne}}
 {{trans-mid}}
-* Lombard: {{t|lmo|butter|m}} {{qualifier|Milan}}, {{t|lmo|bütìr|m}} {{qualifier|Occidental}}
+* Lombard: {{qualifier|Milan}} {{t|lmo|butter|m}}, {{qualifier|Occidental}} {{t|lmo|bütìr|m}}
 * Low German:
 *: German Low German: {{t+|nds-de|Botter|f}}
 * Luxembourgish: {{t+|lb|Botter|m}}
