--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -38,7 +38,9 @@ There are minor differences in where the last stroke of the top component (top-l
 {{zh-hanzi}}
 
 # [[spring]] {{gloss|season}}
+#: {{zh-l|春天}}
 # [[lust]]
+#: {{zh-l|思春期}}
 
 ====Compounds====
 * [[春冰]]
