--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -194,6 +194,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-mid}}
 * Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
 * Maori: {{t|mi|ruakitanga}}
+* Romanian: {{t+|ro|vomare|f}}
 {{trans-bottom}}
 
 ====See also====
