t+ro:[[vomitare]] ([[WT:EDIT|Assisted]]) <vomit#37161145>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -194,7 +194,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-mid}}
 * Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
 * Maori: {{t|mi|ruakitanga}}
-* Romanian: {{t+|ro|vomare|f}}
+* Romanian: {{t+|ro|vomare|f}}, {{t+|ro|vomitare|f}}, {{t+|ro|vomitare|f}}
 {{trans-bottom}}
 
 ====See also====
