t+ro:[[vomă]] ([[WT:EDIT|Assisted]]) <vomit#37161204>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -175,6 +175,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Occitan: {{t|oc|vòmit|m}}
 * Polish: {{t+|pl|wymiociny|p}}
 * Portuguese: {{t+|pt|vômito|m}}
+* Romanian: {{t+|ro|vomă|f}}
 * Russian: {{t+|ru|блево́тина|f}}, {{t+|ru|рво́та|f}}
 * Serbo-Croatian:
 *: Roman: {{t|sh|povraćka|f}}, {{t+|sh|bljuvotina|f}}, {{t+|sh|povraćaj|m}}, {{t|sh|izbljuvak|m}}
