--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -195,7 +195,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-mid}}
 * Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
 * Maori: {{t|mi|ruakitanga}}
-* Romanian: {{t+|ro|vomare|f}},  {{t+|ro|vomitare|f}}
+* Romanian: {{t+|ro|vomare|f}},  {{t+|ro|vomitare|f}}, {{t+|ro|vărsare|f}}, {{t|ro|borâre|f}}
 {{trans-bottom}}
 
 ====See also====
