--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -11,7 +11,7 @@
 ===Verb===
 {{head|en|past participle}}
 
-# {{past participle of|choose|lang=en|nocat=1}} {{qualifier|also used as an adjective}}
+# {{inflection of|choose||past|part|lang=en}} {{qualifier|also used as an adjective}}
 
 ====Derived terms====
 * [[chosenness]]
