--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -135,7 +135,7 @@ From {{etyl|fr|en}} {{m|fr|France}}, {{etyl|fro|en}} {{m|fro|France}}, {{etyl|la
 * Meru: {{t|mer|Frans}}
 * Mongolian: {{t+|mn|Франц}}, {{t|mn|Франц улс}}
 * Nauruan: {{t|na|France}}
-* Navajo: {{t|nv|Dáághahii Dinéʼiʼ bikéyah|sc=Latn}}
+* Navajo: {{t|nv|Dáághahii Dineʼé bikéyah|sc=Latn}}
 * Neapolitan: {{t|nap|Franza|f}}
 * Norman: {{t|nrf|France|f}} {{qualifier|Jersey}}
 * Northern Sami: {{t|se|Frankriika}}
