--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -28,7 +28,7 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|on=[[く]] (ku)|kun=[[ともに]] (tomoni)}}
+* {{ja-readings|kanon=[[く]] (ku)|goon=[[く]] (ku)|kanyoon=[[ぐ]] (gu)|kun=[[ともに]] (tomoni)}}
 
 ====Compounds====
 * [[倶楽部]] (''kurabu''): club
