--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -241,6 +241,13 @@ From {{etyl|fro|fr}} {{m|fro|France}}, from {{etyl|LL.|fr}} {{m|la|Francia}}, fr
 * [[français]], [[Français]]
 * [[Marie-France]] (given name)
 
+===Descendants===
+* Chinese: {{zh-l|法蘭西}}
+* English: {{l|en|France}}
+* Japanese: {{ja-l|フランス||Furansu}}
+* Korean: {{l|ko|^프랑스}}
+* Rade: {{l|rad|Prăng}}
+
 ===Anagrams===
 * [[Céfran#French|Céfran]]
 
