--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Ido: {{t+|io|korpo}}
 {{trans-mid}}
 * Latvian: {{t+|lv|ķermenis|m}}
-* Portuguese: {{t+|pt|corpo|m}}
+* Portuguese: {{t+|pt|corpo|m}}, {{t+|pt|carne|f}}
 * Scottish Gaelic: {{t|gd|feòil|f}}, {{t|gd|craiceann|m}}
 * Spanish: {{t+|es|carne|f}}
 * Swahili: {{t+|sw|ngozi}}
