--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -174,26 +174,6 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * [[cost the earth]]
 * [[how much does it cost]]
 
-===Etymology 3===
-{{PIE root|en|ǵews}}
-From {{etyl|enm|en}} {{m|enm|cost}}, from {{etyl|ang|en}} {{m|ang|cost||option, choice, possibility, manner, way, condition}}, from {{etyl|non|en}} {{m|non|kostr||choice, opportunity, chance, condition, state, quality}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kustuz||choice, trial}} (or {{etyl|gem-pro|en}} {{m|gem-pro|*kustiz||choice, trial}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵéwstus||to enjoy, taste}}.
-
-Cognate with {{etyl|is|-}} {{m|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust||taste, flavour}}, {{etyl|nl|-}} {{m|nl|kust||choice, choosing}}, {{etyl|frr|-}} {{m|frr|kest||choice, estimation, virtue}}, {{etyl|fy|-}} {{m|fy|kêst||article of law, statute}}, {{etyl|ang|-}} {{m|ang|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence}}, {{etyl|la|-}} {{m|la|gustus||taste}}. Related to {{l|en|choose}}.
-
-====Noun====
-{{en-noun}}
-
-# [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
-# [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]]; a [[wont]] or [[habit]]; [[disposition]]; [[nature]]; [[kind]]; [[characteristic]].
-
-=====Derived terms=====
-* {{l|en|at all costs}}
-* {{l|en|needs-cost}}
-
-=====Related terms=====
-* {{l|en|costen}}
-* {{l|en|costning}}
-
 =====Translations=====
 {{trans-top|to incur a charge, a price}}
 * Abkhaz: {{t-needed|ab}}
@@ -272,8 +252,29 @@ Cognate with {{etyl|is|-}} {{m|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust|
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 {{trans-bottom}}
 
+===Etymology 3===
+{{PIE root|en|ǵews}}
+From {{etyl|enm|en}} {{m|enm|cost}}, from {{etyl|ang|en}} {{m|ang|cost||option, choice, possibility, manner, way, condition}}, from {{etyl|non|en}} {{m|non|kostr||choice, opportunity, chance, condition, state, quality}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kustuz||choice, trial}} (or {{etyl|gem-pro|en}} {{m|gem-pro|*kustiz||choice, trial}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵéwstus||to enjoy, taste}}.
+
+Cognate with {{etyl|is|-}} {{m|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust||taste, flavour}}, {{etyl|nl|-}} {{m|nl|kust||choice, choosing}}, {{etyl|frr|-}} {{m|frr|kest||choice, estimation, virtue}}, {{etyl|fy|-}} {{m|fy|kêst||article of law, statute}}, {{etyl|ang|-}} {{m|ang|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence}}, {{etyl|la|-}} {{m|la|gustus||taste}}. Related to {{l|en|choose}}.
+
+====Noun====
+{{en-noun}}
+
+# [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
+# [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]]; a [[wont]] or [[habit]]; [[disposition]]; [[nature]]; [[kind]]; [[characteristic]].
+
+=====Derived terms=====
+* {{l|en|at all costs}}
+* {{l|en|needs-cost}}
+
+=====Related terms=====
+* {{l|en|costen}}
+* {{l|en|costning}}
+
 ===Etymology 4===
-{{rfe|lang=en}}
+===Etymology===
+From {{etyl|fro|fr}} ''[[coste]]'' from {{etyl|la|fr}} ''[[costa]]''.
 
 ====Noun====
 {{en-noun}}
