t+cu:[[Франкїꙗ]] ([[WT:EDIT|Assisted]]) <France#37230614>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -142,6 +142,7 @@ From {{etyl|fr|en}} {{m|fr|France}}, {{etyl|fro|en}} {{m|fro|France}}, {{etyl|la
 * Norwegian: {{t+|no|Frankrike}} (Franske Republikk, Republikken Frankrike)
 * Novial: {{t|nov|Fransia}}
 * Occitan: {{t+|oc|França|f}}
+* Old Church Slavonic: {{t|cu|Франкїꙗ|sc=Cyrs}}
 * Old English: {{t|ang|Francland}}
 * Ossetian: {{t|os|Франц}}
 * Pashto: {{t+|ps|فرانسه|tr=frânsa|sc=ps-Arab}}, {{t|ps|فرانس|tr=frâns|sc=ps-Arab}}
