t+cu:[[Нѣмьци]] ([[WT:EDIT|Assisted]]) <Germany#37230681>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -230,6 +230,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Norwegian: {{t+|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|Alemanha|f}}
+* Old Church Slavonic: {{t|cu|Нѣмьци|sc=Cyrs}}
 * Old French: {{t|fro|Alemaigne|f}}
 * Old Provençal: {{t|pro|Alamagna}}
 * Oriya: {{t+|or|ଜର୍ମାନୀ|sc=Orya}}
