t+yi:[[כראַביע]] ([[WT:EDIT|Assisted]]) <count#37233425>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -351,7 +351,7 @@ From {{etyl|fro|en}} {{m|fro|comte}} and {{m|fro|conte||count}}, from {{etyl|la|
 * Spanish: {{t+|es|conde|m}}
 * Swedish: {{t+|sv|greve}}
 * Turkish: {{t+|tr|kont|m}}
-* Yiddish: {{t|yi|גראַף|m}}
+* Yiddish: {{t|yi|גראַף|m}}, {{t|yi|כראַביע|m}} {{qualifier|Poland}}
 {{trans-bottom}}
 
 [[Category:English ergative verbs]]
