--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -141,7 +141,7 @@
 {{ja-kanjitab|ほし|yomi=k}}
 {{IPAchar|/posi/}} → {{IPAchar|/fosi/}} → {{IPAchar|/hoɕi/}}
 
-From {{etyl|ojp|ja|sort=ほし}}. Possibly cognate with {{etyl|ko|-}} {{m|ko|별||star}} and {{etyl|mnc|-}} {{m|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
+From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{etyl|ko|-}} {{m|ko|별||star}} and {{etyl|mnc|-}} {{m|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
 
 ===Pronunciation===
 {{ja-pron|yomi=k|ほし|acc=0|acc_ref=DJR,NHK}}
