--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -299,7 +299,7 @@ From modern {{etyl|fr|de}} {{m|fr|blond}}, which possibly from {{etyl|frk|de}}. 
 ==Romanian==
 
 ===Etymology===
-From {{etyl|fr|ro}} {{m|fr|blond}}.
+{{bor|ro|fr|blond}}.
 
 ===Pronunciation===
 * {{IPA|/blond/|lang=ro}}
@@ -309,11 +309,11 @@ From {{etyl|fr|ro}} {{m|fr|blond}}.
 
 # {{l|en|blond}}
 
-====Synonyms====
-* [[bălai]]
-
 ====Declension====
-{{ro-adj-decl|fs=blondă|mpl=blonzi|fpl=blonde|ms-def=blondul|fs-def=blonda}}
+{{ro-adj-4|mp=blonzi}}
+
+====Synonyms====
+* {{l|ro|bălai}}
 
 ----
 
