--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -230,7 +230,7 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 ====Translations====
 {{trans-top|transitive: apply force to (something) so it comes towards one}}
 * Arabic: {{t|ar|جَرَّ}}, {{t|ar|سَحَبَ}}
-*: Egyptian Arabic: {{t|arz|جر|tr=garr|sc=Arab}}, {{t|arz|جرجر|tr=gargar|sc=Arab}}, {{t|arz|سحب|tr=saḥab|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|شد|tr=shadd|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|جر|tr=jerr}}, {{t|ary|جبد|tr=jbed}}
 * Armenian: {{t+|hy|քաշել}}, {{t+|hy|ձգել}}
 * Azeri: {{t+|az|çəkmək}}
