t+pt:[[float]] ([[WT:EDIT|Assisted]]) <float#37237725>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -320,6 +320,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-mid}}
 * French: {{t+|fr|flottant|m}}, {{t+|fr|float|m}}, {{t|fr|nombre flottant|m}}
 * German: {{t|de|Float|n}}
+* Portuguese: {{t+|pt|float|m}}
 {{trans-bottom}}
 
 {{trans-top|soft beverage with a scoop of ice-cream}}
