--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=27247|canj=ORSE|ids=⿰亻叚}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=27247|canj=ORYE|ids=⿰亻叚}}
 
 ====References====
 * {{Han ref|kx=0110.030|dkj=00835|dj=0233.160|hdz=10196.020|uh=5047|ud=20551|bh=B0B2|bd=45234}}
