--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -303,10 +303,11 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 {{trans-bottom}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
 # [[language]], [[jargon]], or [[terminology]] used uniquely in a particular environment or group.
-#: '' Corporate '''speak'''; IT '''speak''' ''
+#: ''Corporate '''speak'''; IT '''speak'''.''
+# [[speach|Speach]], [[conversation]].
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''speak'' (noun)}}
