--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -64,7 +64,7 @@
 * Norman: {{t|nrf|Rouoyaume Unni|m|alt=Le Rouoyaume Unni}}
 * Kazakh: {{t|kk|Құрама Патшалық}}
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t|km|រាជាណាចក្ររួម}}
-* Korean: {{t+|ko|영국}} ({{t+|ko|英國|sc=Kore}}), {{t|ko|대브리튼 연합 왕국}} {{t|ko|연합 왕국}}
+* Korean: {{t+|ko|영국}} ({{t+|ko|英國|sc=Kore}}), {{t|ko|그레이트브리튼 북아일랜드 연합 왕국}} {{t|ko|연합 왕국}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
 {{trans-mid}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
