--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -203,6 +203,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Finnish: {{t+|fi|suora}}, {{t+|fi|rehellinen}}, {{t+|fi|vilpitön}}
 * French: {{t+|fr|comme il faut}}
 * German: {{t+|de|aufrecht}}, {{t+|de|aufrichtig}}
+* Hebrew: {{t|he|יָשִׁיר|m|tr=yashír}}
 * Hungarian: {{t+|hu|egyenes}}, {{t+|hu|őszinte}}
 * Irish: {{t|ga|díreach}}
 * Italian: {{t+|it|retto}}, {{t+|it|diretto|m}}, {{t|it|senza preamboli}}
