--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -157,6 +157,7 @@ From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{etyl|ko|-}} {{m|ko
 {{der-top}}
 * {{ja-r|箒星|ほうきぼし}}: [[comet]]
 * {{ja-r|星星|ほしぼし}}, {{ja-r|星々|ほしぼし}}: [[stars]] {{qualifier|[[plural]]}}
+* {{ja-r|輝星|きせい}}: [[bright]] [[star]]
 {{der-bottom}}
 
 ====Coordinate terms====
