--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -6,7 +6,7 @@ From {{inh|en|enm|cacchen}}, from {{der|en|xno|cachier}}, from {{etyl|ONF.|en}},
 The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern English.
 
 ===Pronunciation===
-* {{enPR|kăch}}, {{IPA|/kætʃ/|/kɛtʃ/|[ˈkʰæt͡ʃ]|[ˈkʰɛt͡ʃ]|lang=en}}
+* {{enPR|kăch|kĕch}}, {{IPA|/kætʃ/|/kɛtʃ/|lang=en}}
 * {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
 * {{rhymes|ætʃ|lang=en}}, {{rhymes|ɛtʃ|lang=en}}
 
