--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -372,7 +372,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 ====Usage notes====
 The meaning of ''semen or female ejaculatory discharge'' is considered rude slang. Many style guides and editors recommend the spelling ''come'' for verb uses while strictly allowing the spelling ''[[cum]]'' for the noun. Both spellings are sometimes found in either the noun or verb sense, however. Others prefer to distinguish in formality, using ''come'' for any formal usage and ''cum'' only in slang, erotic or pornographic contexts.<ref>[http://www.glossophilia.org/?p=4925 Glossophilia]</ref>
 
-====See also====
+====Derived terms====
 * [[cum]]
 
 ===Preposition===
