/* Noun */ ## A day falling between two [[public holiday]]s and consequently designated as an additional holiday. <bridge#37405860>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -55,6 +55,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 ## {{label|en|graph theory}} An [[edge]] which, if [[remove]]d, changes a [[connected graph]] to one that is not connected.
 ## {{label|en|poetry}} A point in a [[line]] where a [[break]] in a word unit cannot occur.
 ## {{label|en|diplomacy}} A statement, such as an [[offer]], that signals a possibility of accord.
+## A day falling between two [[public holiday]]s and consequently designated as an additional holiday.
 # {{label|en|electronics}} Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
 # A low wall or vertical partition in the fire chamber of a furnace, for deflecting flame, etc.; a [[bridge wall]].
 # A solid crust of undissolved salt in a [[water softener]].
