--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -23,7 +23,7 @@
 
 ===Kanji===
 {{ja-kanji|grade=3|rs=土04}}
-* {{alternative form of|阪|lang=ja}}
+# {{alternative form of|阪|lang=ja}}
 
 ====Readings====
 * {{ja-readings|goon=[[べん]] (ben), [[ほん]] (hon)|kanon=[[はん]] (han)|kanyoon=[[ばん]] (ban)|kun=[[さか]] (saka)}}
