--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -58,7 +58,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 
 ====Translations====
 {{trans-top|to be supported by a liquid}}
-* Arabic: {{t|ar|يطفو}}
+* Arabic: {{t|ar|طَفَا}}
 * Belarusian: {{qualifier|abstract}} {{t|be|пла́ваць|impf}}, {{t|be|папла́ваць|pf}}, {{qualifier|concrete}} {{t|be|плыць|impf}}, {{t|be|паплы́ць|pf}}
 * Bulgarian: {{t+|bg|плавам}}
 * Burmese: {{t+|my|မျော}}
@@ -98,7 +98,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-bottom}}
 
 {{trans-top|to be capable of floating}}
-* Arabic: {{t|ar|يطفو}}
+* Arabic: {{t|ar|طَفَا}}
 * Bulgarian: {{t|bg|държа се на повърхността|sc=Cyrl}}
 * Dutch: {{t+|nl|drijven}}
 * Finnish: {{t+|fi|kellua}}, {{t|fi|[[pysyä]] [[pinnalla]]}}
