--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -279,9 +279,10 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 # {{label|en|slang}} To [[hit]] someone or something with a brick.
 # {{label|en|computing|_|slang}} To make an [[electronic]] device nonfunctional and usually beyond repair, essentially making it no more useful than a brick.
 #: ''My VCR was '''bricked''' during the lightning storm''.
+#* {{quote-newsgroup|author=Mike Leeson|authorlink=|email=|title=How to write protect nk.bin
+|newsgroup= microsoft.public.windowsce.platbuilder|id=OHm5#hLdCHA.2592@tkmsftngp09|url=https://groups.google.com/forum/#!original/microsoft.public.windowsce.platbuilder/xRTiJphRn-o/ytrmsWNhLKEJ|date=2002-10-15|accessdate=2016-02-25|passage=Just need to project against users from deleting NK.BIN and '''bricking''' the device. }}
 #* '''2007''' December 14, Joe Barr, “PacketProtector turns SOHO router into security powerhouse”, ''Linux.com''
 #*: installing third-party firmware will void your warranty, and it is possible that you may '''brick''' your router.
-
 ====Antonyms====
 * {{sense|technology, slang: revert a device to the operational state}} [[unbrick]]
 
