--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -61,7 +61,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 # {{label|en|countable|music}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse. {{jump|refrain|s}}
 #* {{quote-book|2003|Robert Hugh Benson|Come Rack! Come Rope!|page=268|url=http://books.google.com/books?id=f5abPx1KeKQC
 |passage=The phrase repeated itself like the '''catch''' of a song.}}
-# {{label|en|countable|cricket|baseball}}<span id="cricket"/> The act of catching a hit ball before it reaches the ground, resulting in an out.
+# {{senseid|en|cricket}} {{label|en|countable|cricket|baseball}} The act of catching a hit ball before it reaches the ground, resulting in an out.
 #* {{quote-news|1997|May 10|Henry Blofeld|Cricket: Rose and Burns revive Somerset|The Independent|url=http://www.highbeam.com/doc/1P2-4855186.html
 |passage=It was he who removed Peter Bowler with the help of a good '''catch''' at third slip.}}
 # {{label|en|countable|cricket}} A player in respect of his catching ability; particularly one who catches well.
