--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -24,7 +24,7 @@
 ===Kanji===
 {{ja-kanji|grade=n|rs=日05}}
 
-# {{defn|lang=ja|sort=日05}}
+# the [[Pleiades]] (star cluster)
 
 ====Readings====
 * {{ja-readings|on=[[ぼう]] (bō), [[もう]] (mō)|nanori=[[すばる]] (Subaru), [[すまる]] (Sumaru), [[たかし]] (Takashi), [[のぼる]] (Noboru)}}
