--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -284,6 +284,8 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 {{trans-top|to arrive, to appear}}
 * Arabic: {{t+|ar|قَدِمَ}}
 * Bulgarian: {{t+|bg|пристигам}}, {{t|bg|явявам се}}
+* Chinese:
+*: Cantonese: {{t|yue|到|tr=dou3|sc=Hani}}, {{t|yue|到|tr=dào|sc=Hani}}
 * Czech: {{t+|cs|přijít}}
 * Finnish: {{t+|fi|saapua}}, {{t+|fi|tulla}}
 * French: {{t+|fr|arriver}}
