t+cmn:[[到]] ([[WT:EDIT|Assisted]]) <come#37440015>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -286,6 +286,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Bulgarian: {{t+|bg|пристигам}}, {{t|bg|явявам се}}
 * Chinese:
 *: Cantonese: {{t|yue|到|tr=dou3|sc=Hani}}, {{t|yue|到|tr=dào|sc=Hani}}
+*: Mandarin: {{t+|cmn|到|tr=dào|sc=Hani}}
 * Czech: {{t+|cs|přijít}}
 * Finnish: {{t+|fi|saapua}}, {{t+|fi|tulla}}
 * French: {{t+|fr|arriver}}
