--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -47,6 +47,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Burmese: {{t+|my|အန်|sc=Mymr}}
 * Catalan: {{t+|ca|vomitar}}
 * Chinese:
+*: Cantonese: {{t|yue|嘔|sc=Hani}}, {{t|yue|呕|tr=au2|sc=Hani}}
 *: Mandarin: {{t|cmn|嘔吐|sc=Hani}}, {{t+|cmn|呕吐|tr=ǒutù|sc=Hani}}, {{t+|cmn|嘔|sc=Hani}}, {{t+|cmn|呕|tr=ǒu|sc=Hani}}, {{t+|cmn|吐|tr=tù|sc=Hani}}
 * Czech: {{t+|cs|zvracet|impf}}
 * Dalmatian: {{t|dlm|gombro}}, {{t|dlm|gomituor}}
