t+th:[[เล่น]] t+lo:[[ຫລິ້ນ]] t-balance t+bg:[[играя]] ([[WT:EDIT|Assisted]]) <play#37451903>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -110,6 +110,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Asturian: {{t|ast|xugar}}
 * Basque: {{t|eu|joka}}
 * Belarusian: {{t|be|граць}}
+* Bulgarian: {{t+|bg|игра́я|impf|sc=Cyrl}}
 * Burmese: {{t+|my|ဆော့|sc=Mymr}}
 * Catalan: {{t+|ca|jugar}}
 * Chinese:
@@ -144,8 +145,9 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Korean: {{t+|ko|놀다|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
-* Latgalian: {{t|ltg|kaitavuot}}
 {{trans-mid}}
+* Lao: {{t|lo|ຫລິ້ນ|sc=Laoo}}
+* Latgalian: {{t|ltg|kaitavuot}}
 * Latin: {{t|la|lūdō}}
 * Latvian: {{t|lv|spēlēt}}
 * Lingala: {{t|ln|kosakana}}
@@ -182,6 +184,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Swedish: {{t+|sv|leka}}
 * Tagalog: {{t|tl|maglaro}}
 * Telugu: {{t+|te|ఆడు}}
+* Thai: {{t+|th|เล่น|sc=Thai}}
 * Tok Pisin: {{t|tpi|pilai}}
 * Turkish: {{t+|tr|oynamak}}
 * Ukrainian: {{t+|uk|гра́ти}}
