t+yue:[[德國]] t+yue:[[德国]] ([[WT:EDIT|Assisted]]) <Germany#37453122>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -138,6 +138,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Catalan: {{t+|ca|Alemanya|f}}, {{t+|ca|Alemània|f}}
 * Cherokee: {{t+|chr|ᎠᏛᏥ|sc=Cher}}
 * Chinese:
+*: Cantonese: {{t|yue|德國|sc=Hani}}, {{t|yue|德国|tr=dak1 gwok3|sc=Hani}}
 *: Mandarin: {{t+|cmn|德國|sc=Hani}}, {{t+|cmn|德国|tr=Déguó|sc=Hani}}, {{t+|cmn|德意志|tr=Déyìzhì|sc=Hani}}
 * Chuukese: {{t|chk|Toowis}}, {{t|chk|Ttooyis}}, {{t|chk|Séémén}}
 * Cornish: {{t+|kw|Almayn}}
