--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -1,6 +1,7 @@
 {{also|萅}}
 ==Translingual==
 {{stroke order|strokes=9}}
+{{stroke order|type=animate}}
 
 ===Alternative forms===
 There are minor differences in where the last stroke of the top component (top-left to bottom-right diagonal) starts – on the second horizontal stroke or on the third.
