--- a/en/傖/傖.11177.wikitext
+++ b/en/傖/傖.11177.wikitext
@@ -35,7 +35,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
 
-# {{defn|lang=ja|sort=人10}}
+# vulgar person
+# country man
 
 ====Readings====
 * {{ja-readings|on=[[そう]] (sō), [[しょう]] (shō)|kun=[[いやしい]] (iyashii), [[いやしいもの]] (iyashiimono), [[いなかもの]] (inakamono)}}
