--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -5,7 +5,7 @@
 * {{rhymes|ɛlt|lang=en}}
 
 ===Etymology 1===
-See {{term|spell}}
+See {{m|en|spell}}.
 
 ====Alternative forms====
 * [[spelled]] {{qualifier|US|}}
