--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -88,7 +88,7 @@ A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{term|exempli 
 ===Noun===
 {{en-noun|?}}
 
-# {{label|en|informal}} misuse of e.g. (exampli gratia, for example), pseudo-abbreviation of example
+# {{label|en|informal}} misuse of the abbreviation "e.g." (exampli gratia, for example), pseudo-abbreviation of "example"
 #: ''Lemurs are an '''e.g.''' of a non-simian primate.''
 
 ===Anagrams===
