/* Derived terms */ +temps. <libre#37470104>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -49,11 +49,14 @@ From {{etyl|la|fr}} {{m|la|līber||free}}.
 #:: '''Free''' time.
 
 ====Derived terms====
+{{der-top}}
 * [[champ libre]]
 * [[libre arbitre]]
 * [[licence libre]]
+{{der-mid}}
 * [[logiciel libre]]
 * [[papier libre]]
+{{der-bottom}}
 
 ===Anagrams===
 * [[liber#French|liber]]
