--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -38,7 +38,7 @@
 # City precinct
 
 ====Readings====
-* {{ja-readings|on=[[ぼう]] (bō)|kun=[[まち]] (machi), [[へや]] (heya), [[てら]] (tera)}}
+* {{ja-readings|kanon=[[ほう]] (hō)|kanyoon=[[ぼつ]] (botsu)|goon=[[ぼう]] (bō)|kun=[[まち]] (machi), [[へや]] (heya), [[てら]] (tera)}}
 
 ----
 
