--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 * Occitan: {{t+|oc|butar}}
 * Old English: {{t|ang|scūfan}}
 * Persian: {{t|fa|هل دادن|tr=hol dâdan|sc=fa-Arab}}
-* Polish: {{t+|pl|pchnąć|impf}}, {{t|pl|popchnąć|pf}}
+* Polish: {{t+|pl|pchać|impf}}, {{t+|pl|pchnąć|pf}}, {{t|pl|popchnąć|pf}}
 * Portuguese: {{t+|pt|empurrar}}
 * Quechua: {{t|qu|tanqay}}
 * Romanian: {{t+|ro|împinge}}, {{t+|ro|apăsa}}
