--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -34,8 +34,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 
 ==Latin==
 ===Alternative forms===
-* {{sense|abbreviation}} {{l|la|etc.}}, {{l|la|etc}}, {{l|la|&c.}}, {{l|la|et c.}}
-* {{sense|uncommon}} [[et caetera]], [[et cætera]]
+* Dick Balls dick dick dick dick dick dick dick dick and jane was a godd fam until we dirted they asses
 
 ===Phrase===
 {{head|la|phrase|head=[[et]] [[cētera]]}}
