Reverted edits by [[Special:Contributions/162.17.220.77|162.17.220.77]]. If you think this rollback is in error, please leave a message on my talk page. <et cetera#37479293>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -34,7 +34,8 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 
 ==Latin==
 ===Alternative forms===
-* Dick Balls dick dick dick dick dick dick dick dick and jane was a godd fam until we dirted they asses
+* {{sense|abbreviation}} {{l|la|etc.}}, {{l|la|etc}}, {{l|la|&c.}}, {{l|la|et c.}}
+* {{sense|uncommon}} [[et caetera]], [[et cætera]]
 
 ===Phrase===
 {{head|la|phrase|head=[[et]] [[cētera]]}}
