--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -245,6 +245,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Tuvan: {{t-needed|tyv}}
 * Ukrainian: {{t|uk|ко́штувати|impf|sc=Cyrl}}
 * Venetian: {{t|vec|costar}}, {{t|vec|gostar}}
+* Yiddish: {{t|yi|קאָסטן}}
 * Yoruba: {{t-needed|yo}}
 * Zulu: {{t|zu|biza|alt=-biza}}
 {{trans-bottom}}
