t+yi:[[כאַפּן]] ([[WT:EDIT|Assisted]]) <catch#37498655>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -370,6 +370,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|fånga}}
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
 * Venetian: {{t|vec|ciapar}}
+* Yiddish: {{t|yi|כאַפּן}}
 {{trans-bottom}}
 
 {{trans-top|to intercept an object in the air etc. {{jump|t|seize object}}}}
@@ -406,6 +407,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Swedish: {{t+|sv|fånga}}, {{t+|sv|fatta}} {{qualifier|dated}}
 * Urdu: {{t|ur|پکڑنا|tr=pakaṛnā|sc=ur-Arab}}
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
+* Yiddish: {{t|yi|כאַפּן}}
 {{trans-bottom}}
 
 {{trans-top|to perceive and understand {{jump|t|perceive and understand}}}}
