--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,7 +16,7 @@ A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{term|exempli 
 {{en-adv|?}}
 
 # "[[for example]]" or "[[for the sake of]] an [[example]]": ''[[use]]d to [[introduce]] an [[illustrative]] [[example]] or [[short]] [[list]] of [[example]]s''.
-#: ''Continents ('''e.g.''', Asia) contain many large bodies of water ('''e.g.''', lakes and inland seas) and many flowing large flowing streams of water ([[i.e.]], rivers).''
+#: ''Continents ('''e.g.''', Asia) contain many large bodies of water ('''e.g.''', lakes and inland seas) and many large flowing streams of water ([[i.e.]], rivers).''
 
 ====Usage notes====
 * Unlike "[[etc.]]", "e.g." is very seldomly read as a full Latin phrase. Like "[[i.e.]]", it is typically read out as its English [[calque]] ("[[for example]]") or as its letters ("E-G"). It is also sometimes taught or glossed as "example given" for the benefit of English speakers.
