added [[Category:en:Poker]] using [[Help:Gadget-HotCat|HotCat]] <straight#37550145>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -410,6 +410,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{table:poker hands/en}}
 
 [[Category:English terms with homophones]]
+[[Category:en:Poker]]
 
 ----
 
