--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -44,6 +44,9 @@
 #: {{zh-usex|我 坐 飛機 去 上海。|I go to Shanghai '''by''' plane.}}
 #: {{zh-usex|她 開車 去， 不 坐 火車 去。|She does not go '''by''' train, she drives.}}
 
+====See also====
+* {{zh-l|上|to board}}
+
 ----
 
 ==Japanese==
