--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -33,6 +33,9 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 ----
 
 ==Latin==
+===Pronunciation===
+* {{IPA|/ɛt ˈkeːtɛra/|lang=la}}
+
 ===Alternative forms===
 * {{sense|abbreviation}} {{l|la|etc.}}, {{l|la|etc}}, {{l|la|&c.}}, {{l|la|et c.}}
 * {{sense|uncommon}} [[et caetera]], [[et cætera]]
