/* Translations */ remove a redundancy in Latin <play#37583474>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -269,7 +269,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Norman: {{t|nrf|jouer}}, {{t|nrf|sonner}}
 * Kurdish:
 *: Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=ku-Arab}}
-* Latin: {{t|la|inflo}}, {{t|la|cano}}, {{t|la|cano}}, {{t|la|cano}}, {{t|la|sono}}
+* Latin: {{t|la|inflo}}, {{t|la|cano}}, {{t|la|sono}}
 * Lithuanian: {{t|lt|groti}}
 * Macedonian: {{t|mk|свири}}
 * Old English: {{t|ang|lācan}}
