--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -351,6 +351,7 @@ From {{etyl|fro|en}} {{m|fro|comte}} and {{m|fro|conte||count}}, from {{etyl|la|
 * Slovene: {{t+|sl|grof|m}}
 * Spanish: {{t+|es|conde|m}}
 * Swedish: {{t+|sv|greve}}
+* Thai: {{t|th|เคานต์|sc=Thai}}
 * Turkish: {{t+|tr|kont|m}}
 * Yiddish: {{t|yi|גראַף|m}}, {{t|yi|כראַביע|m}} {{qualifier|Poland}}
 {{trans-bottom}}
