/* Vietnamese */ fixed formatting to use /vi-readings/ template; reversed two readings <圻#37589998>

--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -53,9 +53,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''圻''' ([[kỳ]], [[kì]])
+{{vi-readings|rs=土04| hanviet = [[kì]], [[kỳ]]}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=土04}}
 
 [[fr:圻]]
 [[ko:圻]]
