--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -11,12 +11,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ngan4]]|y=ngan4}}
+===Pronunciation===
+{{zh-pron
+|m=yín
+|c=ngan4
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土06}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,15 +47,6 @@
 {{ko-hanja|hangeul=은|rv=eun|mr=ŭn}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yín]] ([[yin2]])|wg=yin<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
