--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -14,7 +14,7 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=zhí
+|m=zhí,zhì
 |c=zik6
 |mc=y
 |oc=y
@@ -26,6 +26,9 @@
 {{zh-noun}}
 
 # [[price]]
+
+===References===
+* {{R:twedu|A00179}}
 
 ----
 
