--- a/en/値/値.11033.wikitext
+++ b/en/値/値.11033.wikitext
@@ -11,6 +11,11 @@
 
 ----
 
+==Chinese==
+{{zh-see|值|v}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -65,15 +70,6 @@
 
 ====Compounds====
 * [[價値]] ([[가치]], gachi)
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kǒng]] ([[kong3]]), [[zhí]] ([[zhi2]])|wg=k'ung<sup>3</sup>, chih<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
