t+nod:[[ᨾᩣ]] ([[WT:EDIT|Assisted]]) <come#37600404>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -221,7 +221,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Neapolitan: {{t|nap|venì}}
 * Norman: {{t|nrf|v'nîn}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|kaame}}, {{qualifier|Föhr-Amrum}} {{t|frr|kem}}
-* Northern Thai: {{t-needed|nod}}
+* Northern Thai: {{t|nod|ᨾᩣ|tr=ma|sc=Lana}}
 * Norwegian: {{t+|no|komme}}
 * Occitan: {{t+|oc|venir}}, {{t|oc|vir}}
 * Old English: {{t|ang|cuman}}
