/* Norwegian Bokmål */ derived terms <felt#37603198>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -227,6 +227,7 @@ From {{etyl|de|nb}} {{m|de|Feld}}
 * {{l|nb|kjørefelt}}
 {{mid2}}
 * {{l|nb|magnetfelt}}
+* {{l|nb|minefelt}}
 * {{l|nb|oljefelt}}
 {{bottom}}
 
