--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -63,7 +63,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 
 =====Usage notes=====
 * Most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used in US English.
-* {{m|en|badly|Badly}} is sometimes used after {{m|en||feel}} in its copulative sense where one might expect an adjective, ie, {{m|en|bad}}.
+* {{m|en|badly|Badly}} is sometimes used after {{m|en||feel}} in its copulative sense where one might expect an adjective, i.e., {{m|en|bad}}.
 * Some users use {{m|en||badly}} when referring to an emotional state, and {{m|en||bad}} when referring to a more physical or medical state.
 <!--* ''I feel bad.'' means either ''I seem to myself to be [[sick]].'' or ''I am full of [[regret]].''
 * ''I feel badly.'' means ''I have [[trouble]] experiencing emotions.'' or ''I am not able to use the sense of touch well.'' Both comments incomplete and misleading.-->
