/* Derived terms */ <feel#37605427>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -91,8 +91,13 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * {{l|en|feel-good}}
 * {{l|en|feelgoodery}}
 * {{l|en|feeling}}
+* {{l|en|feelness}}
 * {{l|en|feely}}
 * {{l|en|forefeel}}
+* {{l|en|misfeel}}
+* {{l|en|overfeel}}
+* {{l|en|underfeel}}
+* {{l|en|unfeel}}
 {{rel-bottom}}
 
 =====Translations=====
