t+it:[[scala]] ([[WT:EDIT|Assisted]]) <straight#37619645>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -387,6 +387,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Hungarian: {{t+|hu|sor}}
 * Icelandic: {{t+|is|röð|f}}
 * Irish: {{t|ga|sraith|f}}
+* Italian: {{t+|it|scala|f}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto}}
 * Maori: {{t|mi|tōtika}}
 * Polish: {{t+|pl|strit|m}}
