t+frm:[[parler]] t+fro:[[parler]] t+fro:[[paroler]] t+lad:[[avlar]] t+lad:[[favlar]] t+mwl:[[falar]] t+osp:[[fablar]] t+pro:[[parlar]] t+roa-opt:[[falar]] t+rup:[[grescu]] t+rup:[[zburãscu]] t+sc:[[fabedda]] t+sc:[[faeddare]] t+sc:[[fueddai]] t+wa:[[c... <speak#37638866>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -96,6 +96,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Albanian: {{t|sq|flas}}
 * Arabic: {{t|ar|تَحَدَّثَ}}, {{t|ar|تَكَلَّمَ}}
 * Armenian: {{t+|hy|խոսել}}
+* Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Asturian: {{t+|ast|falar}}
 * Avar: {{t-needed|av}}
 * Azeri: {{t+|az|danışmaq}}
@@ -110,6 +111,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Chechen: {{t|ce|лен}}
 * Chinese:
 *: Mandarin: {{t+|cmn|講|sc=Hani}}, {{t+|cmn|讲|tr=jiǎng|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t+|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t+|cmn|講話|sc=Hani}}, {{t+|cmn|讲话|tr=jiǎnghuà|sc=Hani}}
+* Corsican: {{t+|co|parlà}}
 * Crimean Tatar: {{t|crh|söyleşmek}}, {{t|crh|laf etmek}}, {{t|crh|aytmaq}}
 * Czech: {{t+|cs|mluvit|impf}}, {{t+|cs|hovořit|impf}}
 * Dalmatian: {{t|dlm|faular}}
@@ -122,6 +124,8 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Estonian: {{t|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
+*: Old French: {{t|fro|parler}}, {{t|fro|paroler}}
+*: Middle French: {{t|frm|parler}}
 * Friulian: {{t|fur|fevelâ}}
 * Galician: {{t+|gl|falar}}
 * Georgian: {{t|ka|ლაპარაკი|sc=Geor}}
@@ -146,6 +150,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Korean: {{t+|ko|말하다|sc=Hang}}, {{t+|ko|말씀하다|sc=Kore}} {{qualifier|honorific}}
 * Kyrgyz: {{t+|ky|айтуу|sc=Cyrl}}, {{t+|ky|сүйлөө|sc=Cyrl}}
 * Ladin: {{t|lld|rujné}}
+* Ladino: {{t|lad|avlar}}, {{t|lad|favlar}}
 * Lao: {{t|lo|ເວົ້າ|sc=Laoo}}
 * Latgalian: {{t|ltg|runuot}}
 * Latin: {{t+|la|loquor}}, {{t+|la|dīcō}}, {{t|la|fābulor}}, {{t+|la|for}}, {{t|la|effor}}
@@ -162,9 +167,11 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
 * Meänkieli: {{t|fit|praatata}}
 * Mingrelian: {{t-needed|xmf}}
+* Mirandese: {{t|mwl|falar}}
 * Mongolian: {{t+|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
+* Neapolitan: {{t|nap|parlà}}
 * Ngarrindjeri: {{t|nay|kungun}}
 * Norman: {{t|nrf|pâler}} {{qualifier|Jersey}}, {{t|nrf|parlaïr}} {{qualifier|Guernsey}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|spreege}}; {{qualifier|Föhr-Amrum}} {{t|frr|snaake}}, {{t|frr|spreeg}}
@@ -173,6 +180,8 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Novial: {{t|nov|parla}}
 * Occitan: {{t+|oc|parlar}}
 * Old English: {{t|ang|sprecan}}, {{t|ang|specan}}
+* Old Portuguese: {{t|roa-opt|falar}}
+* Old Provençal: {{t|pro|parlar}}
 * Old Saxon: {{t|osx|sprekan}}
 * Ossetian: {{t-needed|os}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
@@ -190,6 +199,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 *: Northern Sami: {{t|se|hállat}}, {{t|se|hoallat}}, {{t|se|hupmat}}
 *: Southern Sami: {{t|sma|håaledh}}, {{t|sma|håalodh}}, {{t|sma|nåalodh}}
 * Santali: {{t|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
+* Sardinian: {{t|sc|fabedda}}, {{t|sc|faeddare}}, {{t|sc|fueddai}}
 * Scottish Gaelic: {{t|gd|bruidhinn}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|говорити|impf|sc=Cyrl}}
@@ -203,6 +213,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 *: Upper Sorbian: {{t|hsb|rěčeć|impf}}, {{t|hsb|porěčeć|pf}}
 * Sotho: {{t+|st|bua}}
 * Spanish: {{t+|es|hablar}}
+*: Old Spanish: {{t|osp|fablar}}
 * Svan: {{t-needed|sva}}
 * Swahili: {{t|sw|ongea}}
 * Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t+|sv|snacka}}
@@ -224,6 +235,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Venetian: {{t|vec|parlar}}
 * Vietnamese: {{t+|vi|nói}}, {{t+|vi|nói chuyện}}, {{t|vi|nói được}}
 * Volapük: {{t+|vo|spikön}}
+* Walloon: {{t+|wa|cåzer}}, {{t|wa|divizer}}, {{t+|wa|djåzer}}, {{t+|wa|pårler}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
 * West Frisian: {{t|fy|sprekke}}
 * Yiddish: {{t+|yi|רעדן}}
