--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -3,6 +3,10 @@
 {{stroke order|strokes=9}}
 {{stroke order|type=animate}}
 
+===Etymology===
+{{Han etyl}}
+{{Han compound|艹|t1=grass|屯|t2=sprout|日|t3=sun|ls=ic}}. The character 春 itself is probably a variant of 屯 as they are equivalent for the meaning "spring" in Old Chinese literature.
+
 ===Alternative forms===
 There are minor differences in where the last stroke of the top component (top-left to bottom-right diagonal) starts – on the second horizontal stroke or on the third.
 
