--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -24,7 +24,7 @@ From {{inh|ru|sla-pro|*maslěnica}}, from {{affix|sla-pro|*maslěnъjь|*-ica|no
 * {{l|ru|блин}}
 
 ===References===
-* {{R:sla:ESSJa|recons=maslěnica|vol=17|page-left=222|page-right=223|page=223}}
+* {{R:sla:ESSJa|recons=*maslěnica|vol=17|page-left=222|page-right=223|page=223}}
 
 [[Category:Russian words suffixed with -ница]]
 
