--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -28,7 +28,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
 * Azeri: {{t+|az|Yeni Zelandiya}}
 * Belarusian: {{t|be|Но́вая Зела́ндыя|f}}, {{t|be|Но́вая Зэля́ндыя|f}} {{qualifier|Taraškevica orthography}}
-* Bengali: {{t|bn|নিউজিল্যান্ড|tr=ni'ujilyanḑ|sc=Beng}}
+* Bengali: {{t|bn|নিউজিল্যান্ড|sc=Beng}}
 * Bislama: {{t|bi|Niu Zilan}}
 * Breton: {{t+|br|Zeland-Nevez}}
 * Bulgarian: {{t|bg|Но́ва Зела́ндия|f}}
@@ -36,7 +36,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Catalan: {{t+|ca|Nova Zelanda}}
 * Chinese:
 *: Cantonese: {{t|yue|紐西蘭|sc=Hani}}
-*: Mandarin: {{t|cmn|新西蘭|sc=Hani}}, {{t+|cmn|新西兰|tr=Xīn-Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t+|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
+*: Mandarin: {{t+|cmn|新西蘭|sc=Hani}}, {{t+|cmn|新西兰|tr=Xīn Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t+|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ Xīlán|sc=Hani}}
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
 * Danish: {{t+|da|New Zealand}}
@@ -52,8 +52,8 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Greek: {{t+|el|Νέα Ζηλανδία|f}}
 * Gujarati: {{t|gu|ન્યુઝીલેન્ડ|tr=n'yujhīlēnḍ|sc=Gujr}}
 * Hawaiian: {{t|haw|Aotearoa}}
-* Hebrew: {{t|he|ניו זילנד|f|tr=niu ziland}}
-* Hindi: {{t|hi|न्यू ज़ीलंड|tr=n'yū zīlaṇḍ}}, {{t|hi|न्यूज़ीलैंड|tr=n'yūzīlaiṇḍ}}, {{t+|hi|न्यूज़ीलैण्ड|tr=n'yūzīlaiṇḍ}}
+* Hebrew: {{t|he|נְיוּ זִילַנְד|f|tr=niu ziland}}
+* Hindi: {{t|hi|न्यू ज़ीलंड}}, {{t|hi|न्यूज़ीलैंड}}, {{t+|hi|न्यूज़ीलैण्ड}}
 * Hungarian: {{t+|hu|Új-Zéland}}
 * Icelandic: {{t+|is|Nýja-Sjáland|n}}
 * Indonesian: {{t+|id|Selandia Baru}}
@@ -61,7 +61,6 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Irish: {{t|ga|Nua-Shéalainn|f|alt=An Nua-Shéalainn}}
 * Italian: {{t+|it|Nuova Zelanda|f}}
 * Japanese: {{t+|ja|ニュージーランド|tr=Nyūjīrando}}, {{t|ja|ニュー・ジーランド|tr=Nyū-Jīrando|sc=Jpan}}
-* Norman: {{t|nrf|Nouvelle Zélande|f}}
 * Kalenjin: {{t|kln|Nyuziland}}
 * Kalmyk: {{t|xal|Шинзеленд}}
 * Kamba: {{t|kam|Nyuziland}}
@@ -69,7 +68,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Kazakh: {{t|kk|Жаңа-Зеландия|sc=Cyrl}}
 * Khmer: {{t|km|ញូហ្សេលែនដ៍|tr=nyuuzeilɛɛn|sc=Khmr}}
 * Kikuyu: {{t|ki|Nyuziland}}
-* Korean: {{t+|ko|뉴질랜드|tr=Nyujillaendeu|sc=Hang}}
+* Korean: {{t+|ko|^뉴질랜드|sc=Hang}}
 * Kyrgyz: {{t|ky|Жаңы Зеландия|sc=Cyrl}}
 * Lao: {{t|lo|ນູແວນ​ເຊລັງ|sc=Laoo}}
 {{trans-mid}}
@@ -90,8 +89,9 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Mongolian: {{t|mn|Шинэ Зеланд|sc=Cyrl}}
 * Nahuatl: {{t|nah|Yancuīc Zetlālpan}}
 * Nepali: {{t|ne|न्युजिल्यान्ड|tr=n'yujilyānḍ|sc=Deva}}
+* Norman: {{t|nrf|Nouvelle Zélande|f}}
 * Norwegian: {{t+|no|New Zealand}}, {{t|no|Ny-Zealand}}
-* Persian: {{t+|fa|نیوزیلند|tr=Niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=Zelând-e Nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=Zelând-e Jadid|sc=fa-Arab}}
+* Persian: {{t+|fa|نیوزیلند|tr=niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
 * Punjabi: {{t|pa|ਨਿਊਜੀਲੈਂਡ|sc=Guru}}, {{t|pa|ਅਮਰੀਕਾ|f|sc=Guru}}
@@ -112,7 +112,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Tamil: {{t+|ta|நியூசிலாந்து|sc=Taml}}, {{t|ta|நியூஜிலாந்து|sc=Taml}}
 * Tatar: {{t|tt|Яңа Зеландия|sc=Cyrl}}
 * Telugu: {{t|te|న్యూజీలాండ్|sc=Telu}}
-* Thai: {{t|th|ประเทศนิวซีแลนด์|tr=bpràtêt niw-seelaen}}, {{t+|th|นิวซีแลนด์|tr=niw-seelaen}}
+* Thai: {{t+|th|นิวซีแลนด์}}, {{t|th|ประเทศนิวซีแลนด์|tr=bprà-têet niu-sii-lɛɛn}}
 * Tongan: {{t|to|Nuʻusila}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
 * Turkmen: {{t|tk|Täze Zelandiýa}}
