--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -119,7 +119,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Ukrainian: {{t|uk|Нова́ Зела́ндія|f}}
 * Urdu: {{t|ur|نیوزی‌لینڈ|tr=n'yūzīlaṇḍ|sc=ur-Arab}}
 * Uzbek: {{t+|uz|Yangi Zelandiya}}
-* Vietnamese: {{t|vi|New Zealand}}, {{t|vi|Tân Tây Lan}} ({{t|vi|新西蘭|sc=Hani}})
+* Vietnamese: {{t|vi|Tân Tây Lan}} ({{t|vi|新西蘭|sc=Hani}})
 * Welsh: {{t+|cy|Seland Newydd|f}}
 * Wolof: {{t|wo|Seland-Gu-Bees}}
 * Yiddish: {{t|yi|ניו־זילאַנד}}
