--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -399,7 +399,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Luxembourgish: {{t|lb|fänken}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan}}
-* Polish: {{t+|pl|łapać|impf}}, {{t+|pl|złapać|pf}}
+* Polish: {{t+|pl|łapać|impf}}, {{t+|pl|złapać|pf}}, {{t+|pl|chwytać|impf}}, {{t+|pl|chwycić|pf}}
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 * Romanian: {{t+|ro|prinde}}
 * Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
@@ -448,6 +448,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-mid}}
 * German: {{t+|de|bekommen}}, {{qualifier|colloquial}} {{t+|de|erwischen}}
 * Hebrew: {{t+|he|תפס|tr=tafás}}
+* Polish: {{t+|pl|zdążyć|pf}}, {{t+|pl|załapać się|pf}}
 * Slovene: {{t|sl|ujeti}}
 {{trans-bottom}}
 
