t+yue:[[紐西蘭]] t+yue:[[新西蘭]] t+yue:[[新西兰]] t+nan:[[紐西蘭]] t+nan:[[纽西兰]] t+hak:[[紐西蘭]] t+hak:[[纽西兰]] t-balance ([[WT:EDIT|Assisted]]) <New Zealand#37665780>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -35,8 +35,10 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Burmese: {{t|my|နယူးဇီလန္|sc=Mymr}}
 * Catalan: {{t+|ca|Nova Zelanda}}
 * Chinese:
-*: Cantonese: {{t|yue|紐西蘭|sc=Hani}}
+*: Cantonese: {{t|yue|紐西蘭|sc=Hani}}, {{t|yue|紐西蘭|tr=nau5 sai1 laan4, nau2 sai1 laan4|sc=Hani}}, {{t|yue|新西蘭|sc=Hani}}, {{t|yue|新西兰|tr=san1 sai1 laan4|sc=Hani}}
+*: Hakka: {{t|hak|紐西蘭|sc=Hani}}, {{t|hak|纽西兰|tr=Niú-sî-làn|sc=Hani}}
 *: Mandarin: {{t+|cmn|新西蘭|sc=Hani}}, {{t+|cmn|新西兰|tr=Xīn Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t+|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ Xīlán|sc=Hani}}
+*: Min Nan: {{t|nan|紐西蘭|sc=Hani}}, {{t|nan|纽西兰|tr=Liú-se-lân|sc=Hani}}
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
 * Danish: {{t+|da|New Zealand}}
@@ -70,8 +72,8 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Kikuyu: {{t|ki|Nyuziland}}
 * Korean: {{t+|ko|^뉴질랜드|sc=Hang}}
 * Kyrgyz: {{t|ky|Жаңы Зеландия|sc=Cyrl}}
-* Lao: {{t|lo|ນູແວນ​ເຊລັງ|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t|lo|ນູແວນ​ເຊລັງ|sc=Laoo}}
 * Latin: {{t|la|Nova Zelandia|f}}
 * Latvian: {{t+|lv|Jaunzēlande|f}}
 * Lithuanian: {{t+|lt|Naujoji Zelandija|f}}
