--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -36,8 +36,9 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Catalan: {{t+|ca|Nova Zelanda}}
 * Chinese:
 *: Cantonese: {{t|yue|紐西蘭|sc=Hani}}, {{t|yue|紐西蘭|tr=nau5 sai1 laan4, nau2 sai1 laan4|sc=Hani}}, {{t|yue|新西蘭|sc=Hani}}, {{t|yue|新西兰|tr=san1 sai1 laan4|sc=Hani}}
-*: Hakka: {{t|hak|紐西蘭|sc=Hani}}, {{t|hak|纽西兰|tr=Niú-sî-làn|sc=Hani}}
+*: Hakka: {{t|hak|紐西蘭|sc=Hani}}, {{t|hak|纽西兰|tr=Néu Sî-làn|sc=Hani}}
 *: Mandarin: {{t+|cmn|新西蘭|sc=Hani}}, {{t+|cmn|新西兰|tr=Xīn Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t+|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ Xīlán|sc=Hani}}
+*: Min Dong: {{t|cdo|新西蘭|sc=Hani}}, {{t|cdo|新西兰|tr=Sĭng-să̤-làng|sc=Hani}}
 *: Min Nan: {{t|nan|紐西蘭|sc=Hani}}, {{t|nan|纽西兰|tr=Liú-se-lân|sc=Hani}}
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
