--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -40,6 +40,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 *: Mandarin: {{t+|cmn|新西蘭|sc=Hani}}, {{t+|cmn|新西兰|tr=Xīn Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t+|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ Xīlán|sc=Hani}}
 *: Min Dong: {{t|cdo|新西蘭|sc=Hani}}, {{t|cdo|新西兰|tr=Sĭng-să̤-làng|sc=Hani}}
 *: Min Nan: {{t|nan|紐西蘭|sc=Hani}}, {{t|nan|纽西兰|tr=Liú-se-lân|sc=Hani}}
+*: Wu: {{t|wuu|新西蘭|sc=Hani}}, {{t|wuu|新西兰|tr=xin xi le|sc=Hani}}
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
 * Danish: {{t+|da|New Zealand}}
