/* Translations */ <New Zealand#37665808>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -32,7 +32,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Bislama: {{t|bi|Niu Zilan}}
 * Breton: {{t+|br|Zeland-Nevez}}
 * Bulgarian: {{t|bg|Но́ва Зела́ндия|f}}
-* Burmese: {{t|my|နယူးဇီလန္|sc=Mymr}}
+* Burmese: {{t|my|နယူးဇီလန်|sc=Mymr}}
 * Catalan: {{t+|ca|Nova Zelanda}}
 * Chinese:
 *: Cantonese: {{t|yue|紐西蘭|sc=Hani}}, {{t|yue|紐西蘭|tr=nau5 sai1 laan4, nau2 sai1 laan4|sc=Hani}}, {{t|yue|新西蘭|sc=Hani}}, {{t|yue|新西兰|tr=san1 sai1 laan4|sc=Hani}}
