--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -189,7 +189,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb|catches|catching|caught}}
+{{en-verb|catches|catching|caught}}. The older past and passive participle {{m|en|catched}} is now nonstandard.
 
 # {{lb|en|heading}} ''To capture, overtake.''
 ## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
