--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -1,6 +1,6 @@
 {{also|儉}}
 ==Translingual==
-
+{{Han simplified forms|儉|倹|俭}}
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OOMO,XOOMO|ids=⿰亻㑒}}
 
