/* Noun */ punctuation <cut#37689485>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -145,7 +145,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 #: ''The drummer on the last '''cut''' of their CD is not identified.''
 # {{label|en|archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
 # A [[haircut]].
-# {{label|en|graph theory}} the [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups
+# {{label|en|graph theory}} The [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups.
 # A string of railway cars coupled together.
 # An engraved block or plate; the impression from such an engraving.
 #: ''a book illustrated with fine '''cuts'''''
