--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -64,6 +64,7 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的}} after the 
 
 ====See also====
 * (''Cantonese'') {{zh-l|係/系}}
+* {{zh-l|判斷詞}}
 
 ===Noun===
 {{zh-noun}}
