--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -22,7 +22,7 @@
 {{zh-forms}}
 
 ===Etymology===
-From {{etyl|sit-pro|zh}} {{m|sit-pro|*m-daj ~ *m-di}}.
+From {{etyl|sit-pro|zh}} {{m|sit-pro|*m-daj ~ *m-di||that; this}}.
 
 ===Pronunciation===
 {{zh-pron
