--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -310,6 +310,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 
 ====Translations====
 {{trans-top|in a forward direction}}
+* Arabic: 
+*: Hijazi Arabic: {{t|acw|على طول|m|tr=ʿala ṭūl|sc=Arab}}, {{t|acw|دغري|m|tr=duḡri|sc=Arab}} {{qualifier|obsolete}}
 * Czech: {{t+|cs|přímo}}
 * Dutch: {{t+|nl|rechtdoor}}
 * Finnish: {{t+|fi|suoraan}}
