--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -54,7 +54,7 @@ A terser form of {{l|en|ex. gr.}}, both abbreviating {{etyl|la}} {{m|la|exempli 
 * Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
 * Japanese: {{t|ja|例えば|tr=tatoeba|sc=Jpan}}
 {{trans-mid}}
-* Korean: {{t+|ko|예|sc=Kore}}
+* Korean: {{t+|ko|예를 들면|sc=Kore}}
 * Latin: {{t+|la|e. g.}}, {{t+|la|ex. gr.}} ''(exempli gratia)''; {{t+|la|e. c.}} ''(exempli causa)''
 * Latvian: {{qualifier|[[piemēram]]}} {{t|lv|piem.}}
 * Lithuanian: {{qualifier|[[pavyzdžiui]]}} {{t|lt|pvz.}}
