--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -22,12 +22,65 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=seoi4|y=seui4}}
+===Pronunciation===
+{{zh-pron
+|m=chuí
+|c=seoi4
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+# {{rfdef|lang=zh}}
+
+====Compounds====
+* [[垂爱]]
+* [[垂成]]
+* [[垂垂]]
+* [[垂钓]]
+* [[垂范]]
+* [[垂挂]]
+* [[垂花门]]
+* [[垂绝]]
+* [[垂老]]
+* [[垂泪]]
+* [[垂怜]]
+* [[垂帘听政]]
+* [[垂柳]]
+* [[垂落]]
+* [[垂暮]]
+* [[垂念]]
+* [[垂盼]]
+* [[垂泣]]
+* [[垂青]]
+* [[垂示]]
+* [[垂手]]
+* [[垂首]]
+* [[垂死]]
+* [[垂体]]
+* [[垂涕]]
+* [[垂髫]]
+* [[垂头丧气]]
+* [[垂亡]]
+* [[垂危]]
+* [[垂问]]
+* [[垂涎]]
+* [[垂线]]
+* [[垂悬]]
+* [[垂询]]
+* [[垂杨柳]]
+* [[垂衣拱手]]
+* [[垂直]]
+* [[垂直带]]
+* [[垂直关系]]
+* [[垂直贸易]]
+* [[垂直起落飞机]]
+* [[垂直尾翼]]
 
 ----
 
@@ -76,59 +129,6 @@
 {{ko-hanja|hangeul=수|rv=su|mr=su}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chuí]] ([[chui2]])|wg=ch'ui<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
-
-====Compounds====
-* [[垂爱]]
-* [[垂成]]
-* [[垂垂]]
-* [[垂钓]]
-* [[垂范]]
-* [[垂挂]]
-* [[垂花门]]
-* [[垂绝]]
-* [[垂老]]
-* [[垂泪]]
-* [[垂怜]]
-* [[垂帘听政]]
-* [[垂柳]]
-* [[垂落]]
-* [[垂暮]]
-* [[垂念]]
-* [[垂盼]]
-* [[垂泣]]
-* [[垂青]]
-* [[垂示]]
-* [[垂手]]
-* [[垂首]]
-* [[垂死]]
-* [[垂体]]
-* [[垂涕]]
-* [[垂髫]]
-* [[垂头丧气]]
-* [[垂亡]]
-* [[垂危]]
-* [[垂问]]
-* [[垂涎]]
-* [[垂线]]
-* [[垂悬]]
-* [[垂询]]
-* [[垂杨柳]]
-* [[垂衣拱手]]
-* [[垂直]]
-* [[垂直带]]
-* [[垂直关系]]
-* [[垂直贸易]]
-* [[垂直起落飞机]]
-* [[垂直尾翼]]
 
 ----
 
