/* Chinese */ minor fix <易#37793771>

--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -55,7 +55,7 @@
 * {{zh-l|易幟}}
 
 ====References====
-* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/default.jsp Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)
+* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/default.jsp Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
