--- a/en/旰/旰.16920.wikitext
+++ b/en/旰/旰.16920.wikitext
@@ -11,12 +11,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gon3]], [[hon6]]|y=gon3, hon6}}
+===Pronunciation===
+{{zh-pron
+|m=gàn,hàn
+|c=gon3,hon6
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=日03}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,15 +47,6 @@
 {{ko-hanja|hangeul=간|eumhun=|rv=gan|mr=kan|y=kan}}
 
 # {{defn|lang=ko|sort=日03}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gàn]] ([[gan4]]), [[hàn]] ([[han4]])|wg=kan<sup>4</sup>, han<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日03}}
 
 [[fr:旰]]
 [[hu:旰]]
