/* Pronunciation */ changed "m=" reading "xí" to "xī"; changed "mn=" reading "sik" to "sek" <昔#37806282>

--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -24,9 +24,9 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 
 ===Pronunciation===
 {{zh-pron
-|m=xí,cuò
+|m=xī,cuò
 |c=sik1
-|mn=sik
+|mn=sek
 |mc=y
 |oc=y
 |ma=
