/* Pronunciation */ ugly, but second pron. of xi doesn't show in expanded view otherwise <昔#37806362>

--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -24,7 +24,7 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 
 ===Pronunciation===
 {{zh-pron
-|m=昔,cuò
+|m=昔,,cuò
 |c=sik1
 |mn=sek
 |mc=y
