t+yue:[[切]] ([[WT:EDIT|Assisted]]) <cut#37810782>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -507,6 +507,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Bulgarian: {{t+|bg|ре́жа|sc=Cyrl}}
 * Catalan: {{t+|ca|tallar}}
 * Chinese:
+*: Cantonese: {{t|yue|切|tr=cit3|sc=Hani}}
 *: Mandarin: {{t+|cmn|切|tr=qiē|sc=Hani}}
 * Czech: {{t+|cs|řezat|impf}}, {{t|cs|tít|impf}}
 * Dalmatian: {{t|dlm|taljur}}
@@ -580,6 +581,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Burmese: {{t+|my|ညှပ်|sc=Mymr}}
 * Catalan: {{t+|ca|tallar}}
 * Chinese:
+*: Cantonese: {{t|yue|切|tr=cit3|sc=Hani}}
 *: Mandarin: {{t+|cmn|切|tr=qiē|sc=Hani}}
 *: Min Nan: {{t|nan|kā|sc=Hani}}
 * Dalmatian: {{t|dlm|taljur}}
