t+yue:[[窗簾]] t+yue:[[窗帘]] ([[WT:EDIT|Assisted]]) <curtain#37810997>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -57,6 +57,7 @@ From {{etyl|fro|en}} {{m|fro|cortine}}, from {{etyl|la|en}} {{m|la|cortina}}.
 * Burmese: {{t|my|ကုလားကာ|sc=Mymr}}, {{t+|my|တင်းထိမ်|sc=Mymr}}
 * Catalan: {{t+|ca|cortina|f}}
 * Chinese:
+*: Cantonese: {{t|yue|窗簾|sc=Hani}}, {{t|yue|窗帘|tr=coeng1 lim4-2|sc=Hani}}
 *: Mandarin: {{t+|cmn|窗簾|sc=Hani}}, {{t+|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t+|cmn|簾子|sc=Hani}}, {{t+|cmn|帘子|tr=liánzi|sc=Hani}}
 *: Min Nan: {{t|nan|thang1-li5|sc=Hani}}
 * Czech: {{t|cs|závěs|m}}
