t+km:[[អាំ]] t+km:[[ម៉ិម]] t+km:[[ជប់]] t+km:[[ក្រេប]] ([[WT:EDIT|Assisted]]) <suck#37874096>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Irish: {{t|ga|súigh}}
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t|it|ciucciare}}
 * Japanese: {{t|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ជប់|tr=cup|sc=Khmr}}, {{t+|km|ក្រេប|tr=kreep|sc=Khmr}}
 * Korean: {{t+|ko|빨다|tr=ppalda}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t+|ku|مژین|sc=ku-Arab}}
 * Lao: {{t-needed|lo}}
@@ -149,6 +149,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * French: {{t+|fr|téter}}
 * German: {{t+|de|saugen}}
 {{trans-mid}}
+* Khmer: {{t+|km|អាំ|tr=am|sc=Khmr}}, {{t+|km|ម៉ិម|tr=məm|sc=Khmr}}
 * Swahili: {{t+|sw|nyonya|alt=kunyonya}}
 {{trans-bottom}}
 {{trans-top|to work the lips and tongue on}}
