t+ru:[[Израиль]] t+ru:[[Израил]] t+ru:[[Исраэль]] t-balance t+yi:[[ייסראָעל]] t+tzm:[[ⵉⵙⵔⴰⵢⵉⵍ]] ([[WT:EDIT|Assisted]]) <Israel#37888358>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -57,6 +57,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Bulgarian: {{t+|bg|Изра́ел|m}}
 * Burmese: {{t|my|အစ္စရေး|sc=Mymr}}, {{t|my|အစ္စရေးနိုင်ငံ|sc=Mymr}}
 * Catalan: {{t+|ca|Israel|m}}
+* Central Atlas Tamazight: {{t|tzm|ⵉⵙⵔⴰⵢⵉⵍ}}
 * Chechen: {{t|ce|Израиль}}
 * Chinese:
 *: Cantonese: {{t|yue|以色列|tr=ji5 sik1 lit6|sc=Hani}}
@@ -154,7 +155,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Uzbek: {{t+|uz|Isroil}}
 * Veps: {{t|vep|Izrail'}}
 * Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
-* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
+* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}, {{t|yi|ייסראָעל|n}}
 {{trans-bottom}}
 
 {{trans-top|Biblical: name given to Jacob}}
@@ -182,9 +183,10 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Catalan: {{t+|ca|Israel|m}}
 * French: {{t+|fr|Israël|m}}
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
-{{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|Israel|m}}
+* Russian: {{t+|ru|Изра́иль|m|sc=Cyrl}}, {{t+|ru|Израи́л|m|sc=Cyrl}}, {{t|ru|Исраэ́ль|m|sc=Cyrl}}
 * Thai: {{t+|th|อิสราเอล|sc=Thai}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
