--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -155,7 +155,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Uzbek: {{t+|uz|Isroil}}
 * Veps: {{t|vep|Izrail'}}
 * Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
-* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}, {{t|yi|ייסראָעל|n}}
+* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
 {{trans-bottom}}
 
 {{trans-top|Biblical: name given to Jacob}}
