--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -290,7 +290,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{l|la|Isrāhēl}}
 
 ===Proper noun===
-{{la-proper noun-indecl|Isrāēl|m}}<br/>
+{{la-proper noun|Isrāēl|g=m|indecl=1}}<br/>
 {{la-proper noun|Isrāēl|Israelis|Isrāēlis|m|third}}
 
 # {{l|en|Israel}}, another name of the patriarch [[Jacob]]
