t+yi:[[פּיעסע]] ([[WT:EDIT|Assisted]]) <play#37968580>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -581,6 +581,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Telugu: {{t+|te|నాటకం}}
 * Turkish: {{t+|tr|oyun}}, {{t|tr|tiyatro oyunu}}
 * Welsh: {{t+|cy|drama|f}}
+* Yiddish: {{t|yi|פּיעסע|f}}
 {{trans-bottom}}
 
 {{trans-top|individual's performance in a sport}}
