/* Definitions */ add example, slightly broaden definition <傅#37971748>

--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -28,7 +28,10 @@
 
 ===Definitions===
 # [[tutor]], [[teacher]]
-# [[assist]]
+# [[assist]] (or perhaps [[enhance]])
+:''Manshu'' (Tang Dynasty), chapter 4.
+::箭鏃傅毒藥
+:::''Arrowheads were laced with poison.''
 # a [[surname]]
 
 ----
